--- a/serial_server/templates/serial-monitor.html
+++ b/serial_server/templates/serial-monitor.html
@@ -9,7 +9,9 @@
 		<h1>Raspberry Pi / AStar32u4 Robot Controller Serial Monitor</h1>
 		
 		<p>Data monitor:</p>
-		<div class="monitor" id="data-monitor"></div>
+		<div class="monitor" id="data-monitor">
+			<ul class="no-bullet" id="monitor-data-items"></ul>
+		</div>
 		<div class="interactions">
 			<input id="serial-data-input" name="serial-data-input" type="text"></input>
 			<button class="standard-button" id="send-data">Send Command</button>
