--- a/serial_server/templates/serial-monitor.html
+++ b/serial_server/templates/serial-monitor.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="/statics/stylesheets/reset.css">
 	<link rel="stylesheet" type="text/css" href="/statics/stylesheets/main.css">
 </head>
 <body>
